<?xml version="1.0"?>
<package format="2">
  <name>logbandpower</name>
  <version>0.0.0</version>
  <description>The logbandpower package</description>

  <maintainer email="letizia.rossato.1@studenti.unipd.it">user</maintainer>
  <maintainer email="valentino.derivo@studenti.unipd.it">user</maintainer>
  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
